# db1-setup

./: .gitignore  Cargo.toml  README.md  package.sh
db1-setup/: Cargo.toml
db1-setup/assets/incus/: README.txt
db1-setup/assets/neovim/: lazy-lock.json
db1-setup/assets/neovim/lua/settings/: tabs.lua
db1-setup/src/: c.rs  cpp.rs  error.rs  hostname.rs  incus.rs  javascript.rs  lib.rs  main.rs  neovim.rs  platform.rs  rpm.rs  rust.rs  ssh.rs  subcommand.rs  tmux.rs  utilities.rs
db1-setup/src/c/: install.rs  verify.rs
db1-setup/src/cpp/: install.rs  verify.rs
db1-setup/src/hostname/: configure.rs  verify.rs
db1-setup/src/incus/: install.rs  verify.rs
db1-setup/src/javascript/: install.rs  verify.rs
db1-setup/src/neovim/: configure.rs  install.rs  verify.rs
db1-setup/src/platform/: cpp.rs  hostname.rs  linux.rs  neovim.rs  ssh.rs
db1-setup/src/platform/linux/: dnf.rs  fedora.rs  rust.rs
db1-setup/src/platform/linux/fedora/: f38.rs  f39.rs
db1-setup/src/rpm/: install.rs  verify.rs
db1-setup/src/rust/: install.rs  verify.rs
db1-setup/src/ssh/: configure.rs  verify.rs
db1-setup/src/subcommand/: c.rs  cpp.rs  hostname.rs  incus.rs  javascript.rs  neovim.rs  rpm.rs  rust.rs  ssh.rs  tmux.rs  utilities.rs
db1-setup/src/subcommand/c/subcommand/: install.rs  verify.rs
db1-setup/src/subcommand/cpp/: subcommand.rs
db1-setup/src/subcommand/cpp/subcommand/: install.rs  verify.rs
db1-setup/src/subcommand/hostname/: subcommand.rs
db1-setup/src/subcommand/hostname/subcommand/: configure.rs  verify.rs
db1-setup/src/subcommand/incus/: subcommand.rs
db1-setup/src/subcommand/rpm/subcommand/: verify.rs  (+1 more)
db1-setup/src/subcommand/ssh/: subcommand.rs
db1-setup/src/subcommand/tmux/: subcommand.rs
db1-setup/src/tmux/: configure.rs  install.rs  verify.rs
db1-setup/src/utilities/: install.rs  verify.rs
db1-setup/tests/: main.rs
package/: Cargo.toml  source.sh
package/linux/: files.csv
package/linux/rpm/: name.spec
package/src/: clean.rs  main.rs  platform.rs  values.rs
package/src/platform/: linux.rs
package/src/platform/linux/: fedora.rs  rpm.rs  tar.rs
(+140 files in other folders)
