[package]
name = "dboeger1-dotfiles"
version = "0.1.0"
edition = "2021"
default-run = "package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
os_info = "3.7.0"
