[package]
name = "db1-setup"
version = "0.1.0"
edition = "2021"
default-run = "package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive", "cargo"] }
const_format = "0.2.32"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
names = "0.14.0"
os_info = "3.7.0"
print-command-rs = { git = "https://github.com/dboeger1/print-command.git" }
