[package]
name = "db1-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
fs_extra = "1.3.0"
os_info = "3.7.0"
prun-rs = { git = "https://github.com/dboeger1/prun.git" }
