[package]
name = "package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
db1-setup = { path = "../db1-setup" }
const_format = "0.2.32"
lazy_static = "1.4.0"
os_info = "3.7.0"
print-command-rs = { git = "https://github.com/dboeger1/print-command.git" }
